--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,31 +1,31 @@
-# Change these first
-owner: upptime # Your GitHub organization or username, where this repository lives
-repo: upptime # The name of this repository
-
-sites:
-  - name: Google
-    url: https://www.google.com
-  - name: Wikipedia
-    url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
-  - name: Test Broken Site
-    url: https://thissitedoesnotexist.koj.co
-
-status-website:
-  # Add your custom domain name, or remove the `cname` line if you don't have a domain
-  # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
-  cname: demo.upptime.js.org
-  # baseUrl: /your-repo-name
-  logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
-  name: Upptime
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
-  navbar:
-    - title: Status
-      href: /
-    - title: GitHub
-      href: https://github.com/$OWNER/$REPO
-
-# Upptime also supports notifications, assigning issues, and more
-# See https://upptime.js.org/docs/configuration
+owner: LonelyJupiter # GitHub username
+repo: UPPTIME # GitHub repository name
+sites: # List of endpoints to track
+  - name: la
+    url: https://la.sf-auto.cf
+  - name: jp
+    url: https://jp.sf-auto.tk
+  - name: jpvir
+    url: https://jpvir.sf-auto.tk
+  - name: sg
+    url: https://v4.trap.eu.org
+  - name: hk1
+    url: https://hkv4.wink.ga
+  - name: hk2
+    url: https://hk2v4.wink.ga
+  - name: cac
+    url: https://niubi.tk
+  - name: kr
+    url: https://oracle.sf-auto.tk
+  - name: eu1
+    url: https://euserv1.niubi.tk
+  - name: eu2
+    url: https://euserv2.niubi.tk
+  - name: eu3
+    url: https://euserv3.niubi.tk
+    
+assignees: # Users to assign downtime issues (optional)
+  - LonelyJupiter
+status-website: # Status website (optional)
+  cname: www.skrr.eu.org # Custom domain CNAME
+  name: UPPTIME # Status website title
