--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -30,7 +30,7 @@ assignees: # Users to assign downtime issues (optional)
   - LonelyJupiter
 status-website: # Status website (optional)
   cname: www.skrr.eu.org # Custom domain CNAME
-  name: 全球服务器在线状态 # Status website title
+  name: 全球服务器状态 # Status website title
   theme: dark
   logoUrl: https://preston.cf/preston.gif
 
