tcping for jpvir

--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -7,6 +7,8 @@ sites: # List of endpoints to track
     url: $JP
   - name: jpvir
     url: $JPVIR
+    check: "tcp-ping"
+    port: 443
   - name: sg
     url: $SG
   - name: hk1
